2003-03-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/generic.h: Add new data type "slots" to obDataType enum.

	* src/pdb.cc (class OBSerialNums): Use new obSerialNums enum,
	rather than overriding user-defined obData# slots. These should
	only be used by user-level code, not by Open Babel internal code.

2003-03-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/atom.cpp (GetType): Fix compilation error when copying in
	"D" atom type for a deuterium atom.

	* src/mol2.cpp (ReadMol2): Read residue information if available,
	along with atom IDs and residue number. Should address feature
	request PR#697614 submitted by Claudio Cavasotto.

	* src/mol.h, src/mol.cpp: Add API support for a molecular total
	charge.
	
2003-03-06  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add support for the isotopes.txt -> .h
	conversion.

	* src/mol.h: Add support for storing atomic isotopes and
	"exact mass" methods.

	* src/mol.cpp (GetExactMass): New method, using isotope table.
	
	* src/atom.cpp: Add support for atomic isotopes, including
	modifications to SetType methods to ensure deuterium isotopes
	translate into the correct type.

	* src/data.h, src/data.cpp: Add new OBIsotopeTable for obtaining
	exact masses of given element/isotope combinations.
	(OBElementTable::GetAtomicNum): Expand to return isotope for the
	case where a "D" or "T" symbol is passed to the table.

	* src/isotope.txt, src/isotope.h: Update to include atomic numbers
	at the beginning of each line so ParseLine() knows "where it is."

	* src/report.cpp: Add output of molecular weight and exact mass.
	
2003-03-02  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/mopac.cpp (ReadMOPAC): Fix problems with MOPAC partial
	charges not translating to other formats. (PR#660364)

2003-02-28  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/mol.h: Add new method OBAtom::SamllestBondAngle().

	* src/atom.cpp: Implement it.
