@@ -1,3 +1,12 @@
+2003-03-11  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
+
+	* src/generic.h, src/generic.cpp: Add new OBUnitCell generic data
+	type for storing and converting unit cell parameters.
+
+	* test/Makefile.in, test/main.cpp, test/unitcell.cpp,
+	test/unitcell.txt: New test to confirm that unit cell conversions
+	occur accurately.
+
 2003-03-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
 
 	* src/generic.h: Add new data type "slots" to obDataType enum.
